--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-sql": "~2",
-    "date-fns": "^4.1.0"
+    "@tauri-apps/plugin-sql": "~2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
