--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tabler/icons-svelte": "^3.28.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-haptics": "^2.2.3",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "~2"
   },
