--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@floating-ui/dom": "^1.6.13",
     "@tabler/icons-svelte": "^3.28.1",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "~2",
