--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-haptics": "^2.2.3",
     "dexie": "^4.0.11",
+    "dexie-cloud-addon": "^4.0.11",
     "zod": "^3.24.1"
   },
   "devDependencies": {
