--- a/.prettierrc
+++ b/.prettierrc
@@ -5,9 +5,7 @@
     "prettier-plugin-organize-imports",
     "prettier-plugin-tailwindcss"
   ],
-  "pluginSearchDirs": [
-    "."
-  ],
+  "pluginSearchDirs": ["."],
   "overrides": [
     {
       "files": "*.svelte",
