--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tauri-apps/plugin-sql": "~2",
     "dexie": "^4.0.11",
     "dexie-cloud-addon": "^4.0.11",
+    "kysely": "^0.27.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
